--- a/css/property.css
+++ b/css/property.css
@@ -65,3 +65,55 @@ Maybe have like...card-focus class or something
 .not-visible {
     display: none;
 }
+
+
+
+
+
+/* Loader css */
+.loader-container {
+    width: 200px; /* Set the width and height as per your design */
+    height: 100px;
+    position: relative;
+  }
+  
+  .loader {
+    border: 4px solid #f3f3f3; /* Light gray border */
+    border-top: 4px solid #3498db; /* Blue border for animation */
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    animation: spin 2s linear infinite; /* Apply the animation to the loader */
+  }
+  
+  @keyframes spin {
+    0% {
+      transform: translate(-50%, -50%) rotate(0deg);
+    }
+    100% {
+      transform: translate(-50%, -50%) rotate(360deg);
+    }
+  }
+
+
+
+
+
+
+/* CUSTOM DIVIDER */
+.custom-divider {
+    display: flex;
+    align-items: center;
+    color: rgba(0, 0, 0, 0.3);
+  }
+
+  .custom-divider::before,
+  .custom-divider::after {
+    content: "";
+    flex: 1;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2); /* Adjust the style and color of the divider line as needed */
+  }
